MOSIP-26304 Updated configuration for mock esignet integration impl